main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
    access_key = 
    secret_key = 
}

resource "aws_vpc" "vpc-prod" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "vpc-production"
  }
}

resource "aws_internet_gateway" "gw-prod" {
  vpc_id = aws_vpc.vpc-prod.id
  tags = {
    Name = "gw-production"
  }
}

resource "aws_route_table" "route-table-prod" {
  vpc_id = aws_vpc.vpc-prod.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw-prod.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw-prod.id
  }

  tags = {
    Name = "rt-production"
  }
}

#subnet
resource "aws_subnet" "subnet-prod" {
  vpc_id     = aws_vpc.vpc-prod.id
  cidr_block = "10.0.1.0/24"
 availability_zone = "us-east-1a"
  tags = {
    Name = "subnet-production"
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-prod.id
  route_table_id = aws_route_table.route-table-prod.id
}

resource "aws_security_group" "allow_web" {
  name        = "allow_tls"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.vpc-prod.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
    ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
    ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

resource "aws_network_interface" "web_server_nic" {
  subnet_id       = aws_subnet.subnet-prod.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
}

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web_server_nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw-prod]
}

resource "aws_instance" "ec2_instance" {
  ami           =  "ami-09d56f8956ab235b3"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "main-key"
  network_interface {
      device_index = 0
      network_interface_id = aws_network_interface.web_server_nic.id
  }
  tags = {
      Name= "ubuntu-server"
  }
user_data = <<-EOF
#!/bin/bash
           sudo apt update -y
           sudo apt install apache2 -y
           sudo systemctl start apache2
           sudo bash -c "echo hello world > /var/html/index.html"  
EOF
}
